--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# Server configuration
+server.port=3000
 spring.application.name=Test-Unitaire_Esiee
+
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:UnitTestEsieeDb
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.sql.init.platform=h2
+spring.h2.console.settings.web-allow-others=true
+
+# Show SQL statements in the console (optional)
+spring.jpa.show-sql=true
