--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ server.port=3000
 spring.application.name=Test-Unitaire_Esiee
 
 # H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:UnitTestEsieeDb
+spring.datasource.url=jdbc:h2:file:./data/UnitTestEsieeDb
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.sql.init.platform=h2
