--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,12 @@ services:
       - SPRING_DATASOURCE_USERNAME=sa
       - SPRING_DATASOURCE_PASSWORD=password
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    volumes:
+      - ./Backend/data:/data
 
   frontend:
     build:
-      context: ./Front
+      context: ./Frontend
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
-      - "80:8080"
