feat: configure HikariCP for database connection pooling and update JPA settings in application.properties; add HikariCP dependency in pom.xml

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -121,6 +121,11 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
