--- a/.github/workflows/generate-javadoc.yml
+++ b/.github/workflows/generate-javadoc.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          server-id: github
+          settings-path: ${{ github.workspace }}
 
       - name: Cache Maven packages
         uses: actions/cache@v3.4.3
@@ -36,9 +36,10 @@ jobs:
 
       - name: Generate JavaDoc
         run: mvn javadoc:javadoc
+        working-directory: ./Backend
 
       - name: Upload JavaDoc
         uses: actions/upload-artifact@v4
         with:
           name: javadoc
-          path: target/site/apidocs
+          path: Backend/target/site/apidocs
