fix: update Javadoc path in generate-javadoc.yml to use Unix-style directory separators

--- a/.github/workflows/generate-javadoc.yml
+++ b/.github/workflows/generate-javadoc.yml
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: javadoc
-          path: Backend\target\reports\apidocs
+          path: ./Backend/target/reports/apidocs
