--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "cypress": "^14.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
