feat: update docker-compose to include backend service dependency and clean up Token.java

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,7 @@ services:
     build:
       context: ./Frontend
       dockerfile: Dockerfile
+    depends_on:
+      - backend
     ports:
       - "8080:8080"
