--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false # https://github.com/cypress-io/github-action/issues/48
       matrix:
-        containers: [1, 2] # Uses 2 parallel instances
+        containers: [ 1, 2 ] # Uses 2 parallel instances
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,8 +39,8 @@ jobs:
 
       - name: Wait for services to be ready
         run: |
-          docker-compose exec backend sh -c 'while ! nc -z localhost 3000; do sleep 1; done'
-          docker-compose exec frontend sh -c 'while ! nc -z localhost 8080; do sleep 1; done'
+          docker-compose exec -T backend sh -c 'while ! nc -z localhost 3000; do sleep 1; done'
+          docker-compose exec -T frontend sh -c 'while ! nc -z localhost 8080; do sleep 1; done'
 
       - name: Cypress run
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
