--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,10 +7,11 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "cy:open": "cypress open"
   },
   "dependencies": {
-    "cypress": "^14.1.0",
+    "cypress": "^14.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
