ci: update branch patterns in CI configuration files to support all feature branches

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
       - dev
-      - features/workflow
+      - features/*
   pull_request:
     branches:
       - master
