--- a/.github/workflows/generate-javadoc-release.yml
+++ b/.github/workflows/generate-javadoc-release.yml
@@ -44,7 +44,7 @@ jobs:
         working-directory: .
 
       - name: Upload JavaDoc to GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda  # v2.2.1
         with:
           name: javadoc
           files: javadoc.zip
